# pyHMSSQL

./: .coverage  .gitignore  .pylintrc  ARCHITECTURE.md  CHANGELOG.md  CYCORE_PROFESSIONAL_MIGRATION_COMPLETE.md  Dockerfile  Dockerfile.orchestrator  HYPERKV_FINAL_SUMMARY.md  HYPERKV_TEST_MIGRATION_SUMMARY.md  INTEGRATION_TESTS_FIXED.md  LICENSE  MULTIMODEL_COMPLETE_GUIDE.md  MULTIMODEL_INTEGRATION_GUIDE.md  README.md  README_MODERNIZED.md  SQLParser.hs  TEST_RESULTS_AND_USAGE.md  build_cycore.py  build_docker.sh  build_parser.sh  build_production.py  coverage.xml  debug_columns.py  debug_left_join.py  debug_stats.py  pyproject.toml  pytest.ini  requirements.txt  run_parser_tests.py  setup.py  test-results.xml  test_compression_demo.py  test_integration.py  test_integration_complete.py  test_multimodel_performance.py  test_orchestrator.py  todo.md
.github/: .pre-commit-config.yaml  issue-labeler.yml  labeler.yml  pull_request_template.md  release-drafter.yml
adaptive_optimizer_data/: plan_baselines.pkl
client/: a.sql  cli_client.py  demo.sql  rest_api_test.py
cycore/: __init__.py  build.py  hashmap.cpp  hashmap.pyx  hashmap_advanced.pyx  hashmap_fallback.cpp  hashmap_fallback.pyx  hlc.h  hlc_timestamp.cpp  hlc_timestamp.pyx  hlc_ts.cpp  hlc_ts.pyx  hlc_ts_simple.cpp  hlc_ts_simple.pyx  setup_hlc.py  setup_hlc_simple.py  setup_swiss.py  setup_swiss_fallback.py  setup_swiss_simple.py  swiss_map_fallback.cpp  swiss_map_simple.cpp  swiss_map_simple.pyx
demo/: demo_multimodel.py  demo_multimodel_standalone.py  final_demo.py
docs/: CYCORE_PRODUCTION_READINESS_REPORT.md  PRODUCTION_RUNBOOK.md  opeation_flow  presentation.tex  short_prez.tex
extra/: replication_flow
k8s/: deploy.sh  hmssql-cluster.yaml  production_validator.py  security-policies.yaml  test-integration.sh
rustcore/geo_sidecar/: Cargo.toml
rustcore/geo_sidecar/src/: geo.rs  lib.rs  main.rs  metrics.rs  routing.rs
rustcore/hlc/: Cargo.toml
rustcore/hlc/src/: lib.rs
(+306 files in other folders)
