[package]
name = "geo_router_sidecar"
version = "0.1.0"
edition = "2021"
authors = ["pyHMSSQL Team"]
description = "High-performance geo-routing sidecar for pyHMSSQL"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
maxminddb = "0.23"
dashmap = "5.5"
parking_lot = "0.12"
once_cell = "1.19"
byteorder = "1.5"
anyhow = "1.0"
thiserror = "1.0"

[features]
default = ["binary"]
binary = []

[[bin]]
name = "geo_router_sidecar"
path = "src/main.rs"
required-features = ["binary"]

[lib]
name = "geo_router_sidecar"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
