# HLC Rust Library Configuration

[package]
name = "pyhmssql-hlc"
version = "1.0.0"
edition = "2021"
description = "Hybrid Logical Clock implementation for pyHMSSQL"

[lib]
name = "pyhmssql_hlc"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# No external dependencies needed for basic HLC
# Consider adding serde for serialization later

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
